--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>数据中台 - 新易科技 DataPlus 一站式数据中台系统</title>
   </head>
   <body>
     <div id="app"></div>
